# rpmsg-dma

./: CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
example/audio_offload/: CMakeLists.txt  Makefile  README.md
example/audio_offload/config/: dsp_offload.cfg
example/audio_offload/host utility/: EQ_CTL.py  README  README.md  audmon.py
example/audio_offload/inc/: config.h  host_interface.h  metrics.h  rpmsg_audio_example.h  uart.h
example/audio_offload/src/: config.c  host_interface.c  metrics.c  rpmsg_audio_example.c  uart.c
include/: dmabuf.h  fw_loader.h  rpmsg.h
src/: CMakeLists.txt  dmabuf.c  fw_loader.c  rpmsg.c
